...
                            <constraint firstItem="N9T-2F-Kys" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="yyX-Jv-kxc"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="wL0-9p-Fii">
                        <barButtonItem key="backBarButtonItem" title=" " id="H9y-WY-9yy"/>
                        <barButtonItem key="leftBarButtonItem" title="Menu" id="KwV-GX-jFS">
                            <connections>
                                <segue destination="Q0l-0R-TCe" kind="custom" customClass="BlurPopupSegue" customModule="PizzaDelivery" customModuleProvider="target" id="UKy-zS-yjV"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="backet" id="SZl-am-noh" customClass="BadgeBarButtonItem" customModule="PizzaDelivery" customModuleProvider="target">
                            <connections>
...
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="Rd3-fi-hn8"/>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="130" id="wEy-sD-jEh"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <state key="normal" title="Dismiss"/>
                                        <connections>
                                            <action selector="dismissButtonTapped:" destination="Q0l-0R-TCe" eventType="touchUpInside" id="YVv-03-QLz"/>
                                        </connections>
                                    </button>
                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="LRh-Cd-mbD">
                                        <rect key="frame" x="31" y="8" width="208" height="32"/>
...
                                                    <rect key="frame" x="16" y="381" width="343" height="45"/>
                                                    <color key="backgroundColor" red="0.82352941180000006" green="0.23921568630000001" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="45" id="5Xi-NX-rF7"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-Medium" family="Apple SD Gothic Neo" pointSize="24"/>
                                                    <state key="normal" title="ORDER NOW">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="orderBttnTapped:" destination="5Mp-fM-G0h" eventType="touchUpInside" id="znw-Lx-fSC"/>
                                                    </connections>
                                                </button>
...
                                <color key="backgroundColor" red="0.82352941180000006" green="0.23921568630000001" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="7dw-5q-Aao"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="182" id="cYT-6a-Zgl"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="30" minY="0.0" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="START ORDER" image="arrow red">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="NO"/>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="16"/>
...
                                                    <rect key="frame" x="16" y="531" width="343" height="45"/>
                                                    <color key="backgroundColor" red="0.82352941180000006" green="0.23921568630000001" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="45" id="Mt8-Hu-Bnv"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="64" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                    <state key="normal" title="CHECK OUT" image="ic-checkOut">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="checkOutBttnTapped:" destination="zgy-wh-cr3" eventType="touchUpInside" id="Qvu-YR-SKq"/>
                                                    </connections>
                                                </button>
...
                                        <rect key="frame" x="16" y="52.5" width="343" height="45"/>
                                        <color key="backgroundColor" red="0.82352941180000006" green="0.23921568630000001" blue="0.27058823529999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="O9j-yt-QMR"/>
                                        </constraints>
                                        <inset key="imageEdgeInsets" minX="64" minY="0.0" maxX="0.0" maxY="0.0"/>
                                        <state key="normal" title="HOME">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="checkOutBttnTapped:" destination="zgy-wh-cr3" eventType="touchUpInside" id="pKs-0p-IXr"/>
                                            <action selector="homeBttnTapped:" destination="b4E-g7-pU4" eventType="touchUpInside" id="xmZ-Y1-EpR"/>
                                        </connections>
...
